Added ChangePassword, Add and Get Profile Picture Endpoints
