# src/controllers/accountController.ts
@@ -1,47 +1,82 @@
 import * as bcrypt from 'bcrypt';
 import * as express from 'express';
 import * as jwt from 'jsonwebtoken';
-import * as mongoose from 'mongoose';
+import * as fs from 'fs';
 /////////////////////////////////////////
-import Controller from '../interfaces/IController';
 /////////////////////////////////////////
 import validationMiddleware from '../middlewares/validation';
 import authMiddleware from '../middlewares/auth';
 /////////////////////////////////////////
+import IController from '../interfaces/IController';
 import ITokenData from '../interfaces/token/ITokenData';
 import IUser from '../interfaces/user/IUser';
-import IPhoto from './../interfaces/IPhoto';
 import IDataStoredInToken from '../interfaces/token/IDataStoredInToken';
 import IRequestWithUser from 'interfaces/httpRequest/IRequestWithUser';
+import IHelper from './../interfaces/user/IHelper';
 /////////////////////////////////////////
 import clientModel from '../models/Client';
 import adminModel from './../models/Admin';
 import userModel from './../models/User';
+import helperModel from '../models/Helper';
 /////////////////////////////////////////
-import CreateUserDTO from '../dto/userDTO';
+import CreateUserDTO from '../dto/createUserDTO';
 import  LogInDto from '../dto/loginDTO';
-import HelperDTO from 'dto/helperDTO';
+import HelperDTO from '../dto/helperDTO';
+import UpdateAccountDTO from '../dto/updateAccountDTO';
+import UpdatePasswordDTO from './../dto/UpdatePasswordDTO';
+import PictureDTO from './../dto/pictureDTO';
 /////////////////////////////////////////
 import WrongCredentialsException from '../exceptions/WrongCredentialsException';
 import WrongUserRoleException from './../exceptions/WrongUserRoleException';
 import UserWithThatEmailAlreadyExistsException from '../exceptions/UserWithThatEmailAlreadyExistsException';
 import SomethingWentWrongException from './../exceptions/SomethingWentWrongException';
-
-
-class AccountController implements Controller {
+import UpdateAccountException from './../exceptions/UpdateAccountException';
+import CouldntSaveToDataBaseException from './../exceptions/CouldntSaveToDataBaseException';
+import OldPasswordDosentMatchException from './../exceptions/OldPasswordDosentMatchException';
+import UpdatePictureException from './../exceptions/UpdatePictureException';
+class AccountController implements IController {
     public path:string;
     public router:express.IRouter;
     constructor(){
-        this.path = '/account';
+        this.path = '/Account';
         this.router = express.Router();
-        this.initializeRoutes(); 
+        this.initializeRoutes();
     }
     private initializeRoutes(){
-        this.router.post(`${this.path}/register`,validationMiddleware(CreateUserDTO),this.registration);
-        this.router.post(`${this.path}/login`,validationMiddleware(LogInDto),this.loggingIn);
-        this.router.get(`${this.path}`,authMiddleware,this.getAccount)
+        this.router.post(`${this.path}/Login`,validationMiddleware(LogInDto),this.login);
+        this.router.post(`${this.path}/RegisterUser`,validationMiddleware(CreateUserDTO),this.register);
+        this.router.post(`${this.path}/Helper/Register`,validationMiddleware(HelperDTO), this.helperRegistration);
+        ///////////////////////////////////////////////////////////////////////////////////////////////////////////
+        this.router.get(`${this.path}`,authMiddleware,this.getAccount);
+        this.router.get(`${this.path}/Picture`,authMiddleware,this.getPicture);
+        ///////////////////////////////////////////////////////////////////////////////////////////////////////////
+        this.router.put(`${this.path}`,authMiddleware,validationMiddleware(UpdateAccountDTO),this.updateAccount);
+        this.router.put(`${this.path}/Picture`,authMiddleware,validationMiddleware(PictureDTO),this.updatePicture);
+        this.router.put(`${this.path}/ChangePassword`,authMiddleware,validationMiddleware(UpdatePasswordDTO),this.updatePassword);
     }
-    
+    private helperRegistration =  async (request:express.Request,response:express.Response,next:express.NextFunction) =>{
+        const userData:HelperDTO = request.body;
+        if( await userModel.findOne({email:userData.email})){
+            next(new UserWithThatEmailAlreadyExistsException(userData.email));
+        }
+        else{
+            const hashedPassword = await bcrypt.hash(userData.password,10);
+            let model=helperModel;
+            try{
+                const user = await model.create({
+                    ...userData,
+                    password:hashedPassword
+                });
+                user.password = undefined;
+                const tokenData = this.createToken(user);
+                response.status(201).send(tokenData);
+            }
+            catch{
+                next(new SomethingWentWrongException());
+            }
+
+        }
+    }
     private createToken(user:IUser) : ITokenData{
         const secret = process.env.JWT_SECRET;
         const dataStoredInToken : IDataStoredInToken = {
@@ -51,11 +86,66 @@ class AccountController implements Controller {
             token: jwt.sign(dataStoredInToken,secret)
         };
     }
-
     private getAccount =  async (request:IRequestWithUser,response:express.Response,next:express.NextFunction) =>{
-        response.status(200).send(request.user);
+            response.status(200).send(await userModel.findById(request.user._id,'-password -_id -picture -createdAt -updatedAt -__v'));
     }
-    private registration = async (request:express.Request,response:express.Response,next:express.NextFunction) => {
+    private getPicture =  async (request:IRequestWithUser,response:express.Response,next:express.NextFunction) =>{
+        response.sendFile(request.user.picture);
+    }
+    private updatePicture = async (request:IRequestWithUser,response:express.Response,next:express.NextFunction) =>{
+        if(request.body.picture){
+            const oldPhotoPath =  request.user.picture;
+            request.user.picture = request.body.picture
+            await request.user.save((err,user:IUser)=>{
+                if(err){
+                    fs.unlink(request.body.picture,(err)=>{
+                        if(err)
+                        console.log(err);
+                    })
+                    next(new UpdatePictureException());
+                }
+                else{
+                        fs.unlink(oldPhotoPath,(err)=>{
+                            if(err)
+                            console.log(err);
+                        })
+                        response.status(200).send("Picture Updated Successfully")
+                }
+            });
+        }
+        else{
+            next(new UpdatePictureException());
+            }
+
+    }
+    private updateAccount = async (request:IRequestWithUser,response:express.Response,next:express.NextFunction)=>{
+        let newData:UpdateAccountDTO = request.body;
+        let newUser = await userModel.findOneAndUpdate({_id:request.user._id},{...newData});
+        if(newUser){
+                response.status(200).send("Updated Successfuly");
+            }
+        else{
+                next(new UpdateAccountException(request.user.email));
+            }
+    }
+    private updatePassword = async (request:IRequestWithUser,response:express.Response,next:express.NextFunction) =>{
+        let newPassword:UpdatePasswordDTO = request.body;
+        let User = await userModel.findById(request.user._id);
+        const isPasswordMatching = await bcrypt.compare(newPassword.oldPassword,User.password);
+        if(isPasswordMatching){
+            User.password = await bcrypt.hash(newPassword.newPassword,10);
+            await User.save((err)=>{
+                if(err){
+                    next(new CouldntSaveToDataBaseException())
+                }else{
+                    response.status(200).send("Updated Successfully");
+                }
+            })
+        }else{
+            next(new OldPasswordDosentMatchException())
+        }
+    }
+    private register = async (request:express.Request,response:express.Response,next:express.NextFunction) => {
         const userData:CreateUserDTO = request.body;
         if( await userModel.findOne({email:userData.email})){
             next(new UserWithThatEmailAlreadyExistsException(userData.email));
@@ -64,7 +154,7 @@ class AccountController implements Controller {
             const hashedPassword = await bcrypt.hash(userData.password,10);
             let model=undefined;
             if(userData.userRole === 0){
-                model = clientModel; 
+                model = clientModel;
             }
             else if(userData.userRole === 1){
                 model = adminModel;
@@ -88,8 +178,7 @@ class AccountController implements Controller {
 
         }
     }
-
-    private loggingIn = async (request:express.Request,response:express.Response,next:express.NextFunction) =>{
+    private login = async (request:express.Request,response:express.Response,next:express.NextFunction) =>{
         const logInData:LogInDto = request.body;
         const user = await userModel.findOne({email:logInData.email});
         if(user){
