# src/dto/helperDTO.ts
@@ -1,23 +1,35 @@
-import { IsString,IsEmail,IsNumber,ValidateNested, IsBoolean, IsArray } from 'class-validator';
-import CreateUserDTO from './userDTO';
-class HelperDTO extends CreateUserDTO {
-    @IsString()
-    public bankAccount: string;
+import { IsString,IsEmail,IsNumber,ValidateNested,IsArray } from 'class-validator';
+import NameDTO from './nameDTO';
+
+class HelperDTO {
+    @ValidateNested()
+    public name: NameDTO;
+
+    @IsEmail()
+    public email: string;
 
     @IsString()
-    public cv_url: string;
-    
-    @IsBoolean()
-    public isApproved:boolean;
-
-    @IsNumber()
-    public nationalNumberId:number;
+    public password: string;
 
     @IsString()
-    public nationalCardPhoto:string;
+    public mobile : string;
 
     @IsArray()
-    public files:Express.Multer.File[];
-  
+    public categories:string[];
+
+    @IsArray()
+    public skills:string[];
+
+    @IsString()
+    public frontID:string;
+
+    @IsString()
+    public backID:string;
+
+    @IsString()
+    public certificate:string;
+
+    @IsString()
+    public picture:string;
 }
 export default HelperDTO;
